--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/About.razor
@@ -2,4 +2,25 @@
 
 <PageTitle>About</PageTitle>
 
-TODO
+<h1>About</h1>
+
+<p>This tool is created to have better conversations with teams on topics regarding the Software Development Live Cycle. It uses the results of the research <a href="https://dora.dev" target="_blank">DevOps Research and Assessment</a> team (DORA).</p>
+
+<h2>Resources</h2>
+
+You can find a lot of resources on this topic on the internet. Here are some of the most important resources to get you started:
+
+<ul>
+    <li><a href="https://dora.dev">DORA Website</a></li>
+    <li><a href="https://itrevolution.com/product/accelerate/">Accelerate - The Science of Lean Software and DevOps: Building and Scaling High Performing Technology Organizations (book)</a></li>
+    <li><a href="https://youtu.be/RBuPlMTXuFc">The Key to High Performance: What the Data Says - Dr. Nicole Forsgren (YouTube)</a></li>
+    <li><a href="https://itrevolution.com/podcast/the-idealcast-episode-24/">Interviews with The DevOps Handbook Coauthors (Part 1 of 2: Patrick Debois and John Willis) (IT Revolution Podcast)</a></li>
+    <li><a href="https://itrevolution.com/podcast/the-idealcast-episode-25/">Behind The State of DevOps Research, Favorite Aha Moments, and Where They Are Now: Interviews with The DevOps Handbook Coauthors (Part 2 of 2) (IT Revolution Podcast)</a></li>
+    <li><a href="https://techleadjournal.dev/episodes/68/">#68 - 2021 Accelerate State of DevOps Report - Nathen Harvey (TechLeadJournal Podcast)</a></li>
+</ul>
+
+<h2>Code</h2>
+
+<p>This project is created by <a href="https://github.com/jacobduijzer" target="_blank">Jacob Duijzer</a>, and it will probably be open source in the near future. For now, it is a work in progress. When the status of the project changes, it will be anounced on <a href="http://linkedin.com/in/jacobduijzer" target="_blank">LinkedIn</a>.</p>
+
+
