--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
@@ -45,6 +45,7 @@
         if (firstRender && !_initialized)
         {
             _userId = await UserId.GetAsync();
+            Session.Join(_userId);
             _initialized = true;
             StateHasChanged(); 
         }
