--- a/src/DevOpsQuickScan.BlazorApp/Components/App.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/App.razor
@@ -18,6 +18,7 @@
 <Routes @rendermode="InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 <script src="js/userStorage.js"></script>
+<script src="js/reportExport.js"></script>
 <script src="@Assets["lib/font-awesome/all.js"]"></script>
 </body>
 
