No question message

--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Facilitator/Dashboard.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Facilitator/Dashboard.razor
@@ -41,7 +41,7 @@
         break;
       case SessionState.NotStarted:
       default:
-        <p>Welcome to DevOps Quick-scan. Please wait for the first question.</p>
+        <NoQuestionComponent />
         break;
     }
     
