--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
@@ -28,7 +28,7 @@
         break;
     case SessionState.NotStarted:
     default:
-        <p>Welcome to DevOps Quick-scan. Please wait for the first question.</p>
+        <NoQuestionComponent /> 
         break;
 }
 
