--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/QuestionComponent.razor
@@ -1,53 +1,55 @@
 @using DevOpsQuickScan.Core
 
-<div class="card">
-    <h5 class="card-header d-flex align-items-center">
-        <span>Question</span>
-        <span class="ms-auto d-flex align-items-center" style="font-size: 0.6em; color: #888;">
-            <span class="me-2">@Question.Category</span>
-            <a href="@Question.Link" target="_blank">
-                <i class="fa-solid fa-circle-info"></i>
-            </a>
-        </span>
-    </h5>
-    <div class="card-body">
-        <h5 class="card-title">@Question.Text </h5>
-        <div class="list-group list-group-flush overflow-hidden">
-            @foreach (var answer in @Question.Answers)
-            {
-                var isSelected = answer.Id == _selectedAnswer;
-                
-                <label class="card-text list-group-item d-flex justify-content-between align-items-center option-item @(isSelected ? "selected" : "")">
-                    <span class="flex-grow-1">@answer.Text</span>
-                    <input class="form-check-input me-3"
-                           type="radio"
-                           name="answer"
-                           value="@answer.Id"
-                           checked="@isSelected"
-                           disabled="@_hasSubmitted"
-                           @onclick="@(() => SelectAnswer(answer))" />
-                </label>
-            }
-        </div> 
-    </div>
-    
-    <div class="card-footer text-end">
-        @if (!_hasSubmitted)
-        {
-            <button class="btn btn-primary"
-                    @onclick="SubmitAnswer"
-                    disabled="@(!CanSubmit)">
-                Submit Answer
-            </button>
-        }
-        else 
-        {
-            <span><em>Answer submitted, waiting for results…</em></span>
-        }
-    </div>
-</div>
+@if (Question is not null)
+{
 
-   
+    <div class="card">
+        <h5 class="card-header d-flex align-items-center">
+            <span>Question</span>
+            <span class="ms-auto d-flex align-items-center" style="font-size: 0.6em; color: #888;">
+                <span class="me-2">@Question.Category</span>
+                <a href="@Question.Link" target="_blank">
+                    <i class="fa-solid fa-circle-info"></i>
+                </a>
+            </span>
+        </h5>
+        <div class="card-body">
+            <h5 class="card-title">@Question.Text </h5>
+            <div class="list-group list-group-flush overflow-hidden">
+                @foreach (var answer in @Question.Answers)
+                {
+                    var isSelected = answer.Id == _selectedAnswer;
+
+                    <label class="card-text list-group-item d-flex justify-content-between align-items-center option-item @(isSelected ? "selected" : "")">
+                        <span class="flex-grow-1">@answer.Text</span>
+                        <input class="form-check-input me-3"
+                               type="radio"
+                               name="answer"
+                               value="@answer.Id"
+                               checked="@isSelected"
+                               disabled="@_hasSubmitted"
+                               @onclick="@(() => SelectAnswer(answer))"/>
+                    </label>
+                }
+            </div>
+        </div>
+
+        <div class="card-footer text-end">
+            @if (!_hasSubmitted)
+            {
+                <button class="btn btn-primary"
+                        @onclick="SubmitAnswer"
+                        disabled="@(!CanSubmit)">
+                    Submit Answer
+                </button>
+            }
+            else
+            {
+                <span><em>Answer submitted, waiting for results…</em></span>
+            }
+        </div>
+    </div>
+}
 
 @code {
 
