--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Home.razor
@@ -37,7 +37,7 @@
     private string? _participantId;
     private bool _initialized = false;
     private Question? _currentQuestion;
-    private RevealedQuestion? _revealedQuestion;
+    private QuestionWithAnswers? _revealedQuestion;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
