--- a/src/DevOpsQuickScan.BlazorApp/Components/Partials/DashboardQuestionComponent.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Partials/DashboardQuestionComponent.razor
@@ -18,7 +18,8 @@
             <div class="list-group list-group-flush overflow-hidden">
                 @foreach (var answer in QuestionWithAnswers.Question.Answers)
                 {
-                    <label class="card-text list-group-item d-flex justify-content-between align-items-center option-item">
+                    <label
+                        class="card-text list-group-item d-flex justify-content-between align-items-center option-item">
                         <span class="flex-grow-1">@answer.Text</span>
                     </label>
                 }
