Register interface, not implementation

--- a/src/DevOpsQuickScan.BlazorApp/Components/Pages/Facilitator/Home.razor
+++ b/src/DevOpsQuickScan.BlazorApp/Components/Pages/Facilitator/Home.razor
@@ -3,7 +3,7 @@
 @using DevOpsQuickScan.Core
 @using DevOpsQuickScan.BlazorApp.Components.Partials
 @inject IJSRuntime Js
-@inject UserIdService UserId
+@inject IUserIdService UserId
 @inject SessionService Session
 
 <PageTitle>Facilitation</PageTitle>
